# persistencia-3

./: database.py  main.py  models.py  pyproject.toml  requirements.txt
rotas/: album.py  perfil.py  publi_album.py  publicacao.py
